[package]
name = "mavio"
description = "Minimalistic MAVLink client that supports `no-std` and `no-alloc` targets."
version = "0.5.6"
edition = "2021"
authors = ["Mykhailo Ziatin <ziatin@mathwithoutend.org>"]
repository = "https://gitlab.com/mavka/libs/mavio"
readme = "../README.md"
license = "MIT OR Apache-2.0"
homepage = "https://mavka.gitlab.io/home/projects/mavio"
keywords = ["MAVLink", "UAV", "drones"]
categories = [
    "aerospace::protocols",
    "aerospace::drones",
    "aerospace::unmanned-aerial-vehicles",
    "no-std",
    "no-std::no-alloc",
]
resolver = "2"
include = [
    "src",
    "Cargo.toml"
]

[lib]
name = "mavio"
path = "src/lib.rs"

###########################################################
# Dependencies
###########################################################
[dependencies]
# General dependencies
bitflags = { version = "2.5.0", default-features = false }
crc-any = { version = "2.4.4", default-features = false }
tbytes = { version = "0.1.0", default-features = false }
sha2 = { version = "0.10.8", default-features = false, optional = true }
thiserror = { version = "2.0.9", optional = true }

# Mavka
mavspec = { version = "0.6.6", default-features = false, features = ["rust", "rust-dialects"] }

# Serde
serde = { version = "1.0.197", default-features = false, features = ["derive"], optional = true }
serde_arrays = { version = "0.1.0", default-features = false, optional = true }

# Specta
specta = { version = "=2.0.0-rc.22", features = ["derive"], optional = true }
specta-util = { version = "0.0.9", optional = true }

# I/O providers
tokio = { version = "1.36.0", features = ["io-util"], optional = true }
futures = { version = "0.3.31", optional = true }
embedded-io = { version = "0.6.1", optional = true }
embedded-io-async = { version = "0.6.1", optional = true }

# Documentation
document-features = { version = "0.2.10", optional = true }

###########################################################
# Features
###########################################################
[features]
#==========================================================
#! ## Generic features
#==========================================================

## Default features (nothing is enabled).
default = []
## Enable unstable API features.
unstable = ["mavspec/unstable"]
## Additional auxilary tools.
extras = []
## Unsafe features that allow access to the internal state of the entities.
unsafe = []

## Enable memory allocation support.
alloc = [
    "mavspec/alloc",
    "serde/alloc",
    "tbytes/alloc",
    "embedded-io/alloc",
    "embedded-io-async/alloc",
]
## Enable the Rust std library.
std = [
    "alloc",
    "mavspec/std",
    "serde/std",
    "sha2/std",
    "tbytes/std",
    "dep:thiserror",
    "bitflags/std",
    "embedded-io/std",
    "embedded-io-async/std",
    "dep:document-features",
]

## Enable sha2 backend for message signing
sha2 = ["dep:sha2"]

#==========================================================
#! ## Serialization and reflection
#==========================================================
#! These features enable [serde](https://serde.rs) and [specta](https://specta.dev) support.

## Enable serde support.
serde = [
    "dep:serde",
    "dep:serde_arrays",
    "mavspec/serde",
    "bitflags/serde",
]
## Enable specta support.
specta = [
    "dep:specta",
    "dep:specta-util",
    "mavspec/specta",
]

#==========================================================
#! ## I/O providers
#==========================================================
#! These features enable I/O providers such as Tokio or embedded-io

## Enable async support via futures-rs
futures = ["dep:futures"]
## Enable async support via Tokio
tokio = [
    "dep:tokio",
    "std",
]
## Enable synchronous I/O support from embedded HAL
embedded-io = ["dep:embedded-io"]
## Enable asynchronous I/O support from embedded HAL
embedded-io-async = [
    "dep:embedded-io",
    "dep:embedded-io-async",
]

#==========================================================
#! ## [MAVSpec](https://crates.io/crates/mavspec) tools
#==========================================================
#! These features package additional MAVSpec utils such as derive macros and message definitions.

## Adds [derive](https://docs.rs/mavspec/latest/mavspec/rust/derive/) macros for MAVLink entities.
##
## You can access them as [`mavio::derive`](crate::derive).
derive = []

## Bundles MAVLink message definitions.
##
## Message [`definitions`] will be generated only for bundled MAVLink dialects. Microservices will be ignored as they are
## just subsets of existing dialects.
##
## Note that while being useful for ground control stations, the generated definitions are quite large and may bloat the
## size of the binary.
##
## ⚠️ This feature won't compile without the ` std ` feature enabled.
definitions = [
    "mavspec/definitions",
]

## Adds additional metadata to MAVLink entities.
metadata = [
    "mavspec/metadata"
]

#==========================================================
#! ## Dialects
#==========================================================
#! Bundle standard MAVLink dialects as defined in XML
#! [message definitions](https://gitlab.com/mavka/spec/protocols/mavlink/message-definitions-v1.0) generated by
#! [MAVSpec](https://crates.io/crates/mavspec).
#!
#! All enabled dialects can be found in the [` dialects `] module. The default dialect, if available, can be found in
#! the [`default_dialect`] or as a [`DefaultDialect`].

## Include `ardupilotmega` dialect
##
## The dialect can be found in [`dialects::ardupilotmega`] module.
dlct-ardupilotmega = ["dlct-common", "mavspec/dlct-ardupilotmega"]
## Include `ASLUAV` dialect
##
## The dialect can be found in [`dialects::asluav`] module.
dlct-asluav = ["dlct-common", "mavspec/dlct-asluav"]
## Include `AVSSUAS` dialect
##
## The dialect can be found in [`dialects::avssuas`] module.
dlct-avssuas = ["dlct-common", "mavspec/dlct-avssuas"]
## Include `common` dialect
##
## The dialect can be found in [`dialects::common`] module.
dlct-common = ["dlct-minimal", "mavspec/dlct-common"]
## Include `csAirLink` dialect
##
## The dialect can be found in [`dialects::cs_air_link`] module.
dlct-cs_air_link = ["mavspec/dlct-cs_air_link"]
## Include `cubepilot` dialect
##
## The dialect can be found in [`dialects::cubepilot`] module.
dlct-cubepilot = ["dlct-common", "mavspec/dlct-cubepilot"]
## Include `development` dialect
##
## The dialect can be found in [`dialects::development`] module.
dlct-development = ["dlct-common", "mavspec/dlct-development"]
## Include `icarous` dialect
##
## The dialect can be found in [`dialects::icarous`] module.
dlct-icarous = ["mavspec/dlct-icarous"]
## Include `matrixpilot` dialect
##
## The dialect can be found in [`dialects::matrixpilot`] module.
dlct-matrixpilot = ["dlct-common", "mavspec/dlct-matrixpilot"]
## Include `minimal` dialect
##
## The dialect can be found in [`dialects::minimal`] module.
dlct-minimal = ["mavspec/dlct-minimal"]
## Include `paparazzi` dialect
##
## The dialect can be found in [`dialects::paparazzi`] module.
dlct-paparazzi = ["dlct-common", "mavspec/dlct-paparazzi"]
## Include `standard` dialect
##
## The dialect can be found in [`dialects::standard`] module.
dlct-standard = ["dlct-minimal", "mavspec/dlct-standard"]
## Include `ualberta` dialect
##
## The dialect can be found in [`dialects::ualberta`] module.
dlct-ualberta = ["dlct-common", "mavspec/dlct-ualberta"]
## Include `uAvionix` dialect
##
## The dialect can be found in [`dialects::u_avionix`] module.
dlct-uavionix = ["dlct-common", "mavspec/dlct-uavionix"]

## Include `all` meta-dialect
##
## The dialect can be found in [`dialects::all`] module.
dlct-all = [
    "dlct-ardupilotmega",
    "dlct-common",
    "dlct-asluav",
    "dlct-avssuas",
    "dlct-cs_air_link",
    "dlct-cubepilot",
    "dlct-development",
    "dlct-icarous",
    "dlct-matrixpilot",
    "dlct-minimal",
    "dlct-paparazzi",
    "dlct-standard",
    "dlct-ualberta",
    "dlct-uavionix",
    "mavspec/dlct-all",
]

#==========================================================
#! ## MAVLink microservices
#==========================================================
#! These features will control the generation of MAVLink microservice-specific bindings.
#!
#! If enabled, microservices can be found in the [` microservices `] module.

## Support for all MavLink microservices
msrv-all = [
    "msrv-heartbeat",
    "msrv-mission",
    "msrv-parameter",
    "msrv-parameter-ext",
    "msrv-command",
    "msrv-manual-control",
    "msrv-camera",
    "msrv-gimbal-v1",
    "msrv-gimbal-v2",
    "msrv-arm-auth",
    "msrv-image-transmission",
    "msrv-ftp",
    "msrv-landing-target",
    "msrv-ping",
    "msrv-path-planning",
    "msrv-battery",
    "msrv-terrain",
    "msrv-tunnel",
    "msrv-open-drone-id",
    "msrv-high-latency",
    "msrv-component-metadata",
    "msrv-payload",
    "msrv-traffic-management",
    "msrv-events-interface",
    "msrv-time-sync",
    "mavspec/msrv-all",
]
## Heartbeat protocol support
##
## This microservice can be found in [`microservices::heartbeat`] module.
msrv-heartbeat = ["msrv", "mavspec/msrv-heartbeat", "dlct-minimal"]
## Mission protocol support
##
## This microservice can be found in [`microservices::mission`] module.
msrv-mission = ["msrv", "mavspec/msrv-mission", "dlct-common"]
## Parameter protocol support
##
## This microservice can be found in [`microservices::parameter`] module.
msrv-parameter = ["msrv", "mavspec/msrv-parameter", "dlct-common"]
## Extended parameter protocol support
##
## This microservice can be found in [`microservices::parameter_ext`] module.
msrv-parameter-ext = ["msrv", "mavspec/msrv-parameter-ext", "dlct-common"]
## Command protocol support
##
## This microservice can be found in [`microservices::command`] module.
msrv-command = ["msrv", "mavspec/msrv-command", "dlct-common"]
## Manual control protocol support
##
## This microservice can be found in [`microservices::manual_control`] module.
msrv-manual-control = ["msrv", "mavspec/msrv-manual-control", "dlct-common"]
## Camera protocol v2 support
##
## This microservice can be found in [`microservices::camera`] module.
msrv-camera = ["msrv", "mavspec/msrv-camera", "dlct-common"]
## Gimbal protocol v1 support
##
## This microservice can be found in [`microservices::gimbal_v1`] module.
msrv-gimbal-v1 = ["msrv", "mavspec/msrv-gimbal-v1", "dlct-common"]
## Gimbal protocol v2 support
##
## This microservice can be found in [`microservices::gimbal_v2`] module.
msrv-gimbal-v2 = ["msrv", "mavspec/msrv-gimbal-v2", "dlct-common"]
## Arm authorization protocol support
##
## This microservice can be found in [`microservices::arm_auth`] module.
msrv-arm-auth = ["msrv", "mavspec/msrv-arm-auth", "dlct-common"]
## Image transmission protocol support
##
## This microservice can be found in [`microservices::image_transmission`] module.
msrv-image-transmission = ["msrv", "mavspec/msrv-image-transmission", "dlct-common"]
## File transfer protocol support
##
## This microservice can be found in [`microservices::ftp`] module.
msrv-ftp = ["msrv", "mavspec/msrv-ftp", "dlct-common"]
## Landing target protocol support
##
## This microservice can be found in [`microservices::landing_target`] module.
msrv-landing-target = ["msrv", "mavspec/msrv-landing-target", "dlct-common"]
## Ping protocol support
##
## This microservice can be found in [`microservices::ping`] module.
msrv-ping = ["msrv", "mavspec/msrv-ping", "dlct-common"]
## Path planning protocol support
##
## This microservice can be found in [`microservices::path_planning`] module.
msrv-path-planning = ["msrv", "mavspec/msrv-path-planning", "dlct-common"]
## Battery protocol support
##
## This microservice can be found in [`microservices::battery`] module.
msrv-battery = ["msrv", "mavspec/msrv-battery", "dlct-common"]
## Terrain protocol support
##
## This microservice can be found in [`microservices::terrain`] module.
msrv-terrain = ["msrv", "mavspec/msrv-terrain", "dlct-common"]
## Tunnel protocol support
##
## This microservice can be found in [`microservices::tunnel`] module.
msrv-tunnel = ["msrv", "mavspec/msrv-tunnel", "dlct-common"]
## Open Drone ID protocol support
##
## This microservice can be found in [`microservices::open_drone_id`] module.
msrv-open-drone-id = ["msrv", "mavspec/msrv-open-drone-id", "dlct-common"]
## High latency protocol support
##
## This microservice can be found in [`microservices::high_latency`] module.
msrv-high-latency = ["msrv", "mavspec/msrv-high-latency", "dlct-common"]
## Component metadata protocol support
##
## This microservice can be found in [`microservices::component_metadata`] module.
msrv-component-metadata = ["msrv", "mavspec/msrv-component-metadata", "dlct-common"]
## Payload protocol support
##
## This microservice can be found in [`microservices::payload`] module.
msrv-payload = ["msrv", "mavspec/msrv-payload", "dlct-common"]
## Traffic management protocol support
##
## This microservice can be found in [`microservices::traffic_management`] module.
msrv-traffic-management = ["msrv", "mavspec/msrv-traffic-management", "dlct-common"]
## Events interface protocol support
##
## This microservice can be found in [`microservices::events_interface`] module.
msrv-events-interface = ["msrv", "mavspec/msrv-events-interface", "dlct-common"]
## Time synchronization protocol support
##
## This microservice can be found in [`microservices::time_sync`] module.
msrv-time-sync = ["msrv", "mavspec/msrv-time-sync", "dlct-common"]

#==========================================================
#! ## Additional MAVLink tools
#==========================================================
#! These features will enable additional MAVLink utilities such as `*.waypoints` file support, mission planninc, etc.
#!
#! ⚠️ All such features require `unstable` feature to be enabled to take effect.

## All MAVLink microservices utils
##
## ⚠️ Requires `unstable` feature to take effect.
msrv-utils-all = [
    "msrv-utils-mission",
    "mavspec/msrv-utils-all",
]
## Mission protocol utils
##
## These additional utils are packaged into [`microservices::mission`] microservice and can be alternatively accessed
## through [`microservices::utils::mission`].
##
## ⚠️ Requires `unstable` feature to take effect.
msrv-utils-mission = [
    "msrv-utils",
    "msrv-mission",
    "dlct-common",
    "mavspec/msrv-utils-mission",
]

#==========================================================
#! ## Technical features
#==========================================================
#! These features should not be used directly.

## ⊛ Enable MAVLink microservices support
##
## Do not use directly as this feature does not give access to any specific functionality by itself. Instead, use one of
## `msrv-*` features.
msrv = ["mavspec/msrv"]

## ⊛️ Enables MAVLink microservices extra utils
##
## Do not use directly as this feature does not give access to any specific functionality by itself. Instead, use one of
## `msrv-utils-*` features.
msrv-utils = ["msrv", "mavspec/msrv-utils"]

###########################################################
# Metadata
###########################################################
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-machete]
ignored = ["serde_arrays"]
