[package]
name = "mavio_examples_async"
description = "Mavio asynchronous examples."
version = "0.0.0"
edition = "2021"
authors = ["Mykhailo Ziatin <ziatin@mathwithoutend.org>"]
repository = "https://gitlab.com/mavka/libs/mavio"
resolver = "2"
publish = false

###########################################################
# Dependencies
###########################################################
[dependencies]
env_logger = "0.10.1"
log = "0.4.20"
mavio = { path = "../../mavio", features = ["std", "minimal", "tokio"] }
portpicker = "0.1.1"
tokio = { version = "1.35.1", features = ["macros", "sync", "rt", "net", "time"] }

[dev-dependencies]
tokio = { version = "1.35.1", features = ["macros", "sync", "rt", "net", "time", "test-util"] }

###########################################################
# Examples
###########################################################
[[example]]
name = "async_tcp_ping_pong"
test = true
